# negatiview

./: .env.example  .gitignore  Makefile  README.md  dev.sh  docker-compose.yml
client/: Cargo.toml  Trunk.toml  index.html  index.scss  tailwind.config.js
client/src/: lib.rs  main.rs  route.rs  router.rs  routes.rs
client/src/app/: health.rs  home.rs  login.rs  mod.rs  posts.rs  router.rs  settings.rs  sign_up.rs  users.rs
client/src/app/components/: banner.rs  footer.rs  header.rs  login.rs  mod.rs  new_post.rs  post_list.rs  sign_up.rs  user_context_provider.rs
client/src/components/: banner.rs  comment.rs  comment_list.rs  delete_comment.rs  footer.rs  header.rs  list_pagination.rs  login.rs  mod.rs  new_comment.rs  pagination.rs  post.rs  post_action.rs  post_list.rs  post_meta.rs  post_preview.rs  show_error.rs  tag.rs  user_context_provider.rs
client/src/middlewares/: context.rs  error.rs  mod.rs  pagination.rs  request.rs
client/src/pages/: editor.rs  health.rs  home.rs  login.rs  mod.rs  new_post.rs  post.rs  profile.rs  settings.rs  sign_up.rs  users.rs
client/src/requests/: user.rs
client/src/services/: comment.rs  mod.rs  post.rs  profile.rs  tag.rs  user.rs
client/src/types/: comment.rs  mod.rs  post.rs  profile.rs  user.rs
server/: Cargo.toml
server/src/: auth.rs  config.rs  handler.rs  handlers.rs  lib.rs  main.rs  model.rs  route.rs  router.rs  routes.rs  schema.rs
server/src/dto/: post.rs  user.rs
server/src/dtos/: comment.rs  mod.rs  post.rs  profile.rs  user.rs
server/src/handlers/: comment.rs  mod.rs  post.rs  profile.rs  tag.rs  user.rs
server/src/middleware/: auth.rs  token.rs
server/src/middlewares/: auth.rs  token.rs
server/src/model/: post.rs  user.rs
server/src/models/: comment.rs  post.rs  user.rs
(+6 files in other folders)
