[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
base64 = "0.21.4"
chrono = { version = "0.4.30", features = ["serde"] }
clap = { version = "4.4.3", features = ["derive"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
log = "0.4.20"
oauth2 = "4.4.2"
rand_core = { version = "0.6.4", features = ["std"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.7.1", features = [
	"runtime-async-std",
	"tls-native-tls",
	"postgres",
	"chrono",
	"uuid",
] }
time = "0.3.29"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
